[package]
name = "unicode-reverse"
version = "1.0.4"
authors = ["Matt Brubeck <mbrubeck@limpet.net>"]
license = "MIT / Apache-2.0"
description = "Unicode-aware in-place string reversal"
repository = "https://github.com/mbrubeck/unicode-reverse"
documentation = "https://docs.rs/unicode-reverse"
keywords = ["unicode", "string", "reverse", "graphemes", "no_std"]
readme = "README.md"

[dependencies]
unicode-segmentation = "1.0"

[dev-dependencies]
quickcheck = "0.4"
